# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

*portage-2.0.50_pre15 (11 Jan 2004): Quick Fixes -- ~arch version

  12 Jan 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Unmerge
  traceback fix.

*portage-2.0.50_pre14 (11 Jan 2004): Quick Fixes -- ~arch version

  12 Jan 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fix for
  traceback on '-S'.

  12 Jan 2004; Nicholas Jones <carpaski@gentoo.org> repoman: Fix for
  traceback on --help.

  12 Jan 2004; Nicholas Jones <carpaski@gentoo.org> sandbox: Fix for
  sandboxpids.tmp file accesses.

  12 Jan 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Sandbox, as
  above. Catch invalid package names and print a sane message about it.

*portage-2.0.50_pre13 (11 Jan 2004): Fixes

  11 Jan 2004; Nicholas Jones <carpaski@gentoo.org> cnf/*: Updated the
  Advanced masking section to aid the reduction of user complaints and
  requests for unreasable usage of ACCEPT_KEYWORDS.
  
  11 Jan 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: A counter
  fix was fixed to actually check the counters of all CP versions to ensure
  the new counter is higher than all existing ones. Modified the dblink
  class to have class lockfiles for the db and tmpdb dirs as well as lock
  other files before editing. Reorganization of the merge code in dblink
  so that the tmpdb is filled immediately after preinst and prior to the
  actual FS merging -- COUNTER and CONTENTS go directly into the tmpdb
  and not into the infodir.
  
*portage-2.0.50_pre11/12 (09 Dec 2003): repoman/binpkg/exit conditions

  09 Jan 2004; Nicholas Jones <carpaski@gentoo.org> emerge: getbinpkgonly
  fixes for emerge -G world, should behave properly now instead of using
  ebuild masks. Only downloads immediately before a merge -- fetchonly now
  applies to binary packages.

  08 Jan 2004; Masatomo Nakano <nakano@gentoo.org> repoman: Ignore other 